# gv-auto

./: .env.example  .gitignore  Dockerfile  README.md  api_key.txt  justfile  parse_html.py  parse_sel.py  pyproject.toml  sync_bingo.py
experiments/: activatable.py  benchmark.py  brotector.py  check_selenium_uc.py  download_ideabox.py  driver_management.py  parse_diary.py  parse_duel.py  parse_ideabox.py
pages/: activatable.mht  activatable.mhtml  answered.mht  bingo_unavailable.mhtml  capital.mht  coupon.mht  done_quest.mht  hint.mht  ideabox.html  ignored.mht  in_town.mht  login_page.mht  next_quest.mht  page1.mhtml  say_after_godvoice1.mht  say_after_godvoice2.mht  walking.mht  zpg_confirm.html
src/gv_auto/: __init__.py  __main__.py  auto.py  browser_params.py  driver.py  environment.py  game_info.py  hero.py  logger.py  login.py  main.py  parse_ideabox.py  response.py  states.py  strategy.py  timeout.py
stats/: brick_stats.csv  calc_statistics.py  parse_bricks_from_log.py
tests/: test_activatables.py  test_env.py  test_herotracker.py  test_page_parsing.py  test_statemanager.py  test_timemanager.py  test_tracker.py  test_zpg.py  utils.py
